# zf-vision

./: .env.example  .gitignore  README.md  pyproject.toml
app/: backend_client.py  camera.py  config.py  local_store.py  main.py  paths.py  push_log.py  scheduler.py  schemas.py
app/routers/: activation.py  api.py  cameras.py  log.py  pages.py  preview.py  roi.py
app/vision/: pipeline.py
tests/: conftest.py  test_activation.py  test_backend_client.py  test_local_store.py
web/static/: app.css  log.js  preview.js  roi.js
web/templates/: _log.html  _preview.html  _step_activation.html  _step_camera.html  _step_done.html  _step_roi.html  base.html
